--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ margin: 0px auto;
 padding: 0px;
 text-align: center;
 font-size: 16px;/*rem指定のための基準サイズ */
+background-color: #F2F2F2;
 }
 
 li{
@@ -41,7 +42,7 @@ img{
 }
 
 header{
-  margin-top: 2rem;
+  margin-top: 4rem;
   margin-bottom: 1rem;
 }
 
@@ -65,12 +66,11 @@ section#galla article {
   margin-bottom: 2rem;
   line-height: 150%;
   overflow: hidden;
-  border-radius: 8px;
+
 }
 
 section#galla img {
   width: 100%;
-
   transition: 0.5s;
 
 }
@@ -106,10 +106,24 @@ z-index: 100;
 background-color: #999;
 opacity: .8;
 width: 50px;
-height: 50px;
-border-radius: 50%;
 border: none;
 color: #fff;
 }
 .scroll-top:hover {
 cursor: pointer;
+}
+
+div.livesec{
+  background-color: #333333;
+  height: 700px;
+}
+
+div.consec{
+  background-color: #white;
+  height: 700px;
+}
+
+img.mokuzi{width: 20%;
+  max-width: 190px;
+margin-top: 1rem;
+}
