--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ div.movie{
 div.livesec{
   background-color: #333333;
   height: 500px;
+
 }
 
 div.consec{
@@ -113,6 +114,7 @@ div.consec{
 
 img.mokuzi{width: 20%;
   max-width: 190px;
+  min-width: 100px;
 margin-top: 1rem;
 padding-bottom: 0.6rem;
 border-bottom: 1.2px solid #333333;
@@ -120,6 +122,7 @@ border-bottom: 1.2px solid #333333;
 img.mokuzi2{width: 7%;
   max-width: 190px;
 margin-top: 1rem;
+min-width: 50px;
 padding-bottom: 0.6rem;
 border-bottom: 1.2px solid white;
 }
@@ -135,7 +138,7 @@ div.livesec ul{
 }
 
 div.day{
-  margin: 5rem;
+  margin: 5%;
 }
 
 
