--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header{
 
 
 main{
-  margin: 2rem;
+  margin: 5rem;
 }
 
 section#galla {
@@ -91,7 +91,7 @@ div#sns  a{
 }
 
 p#from{
-  margin-bottom: 3.5rem;
+  margin-bottom: 2rem;
   font-family: 'Raleway', sans-serif;
   color: #008080;
 }
@@ -173,6 +173,57 @@ div#mask {
   text-align: center;
 }
 
+#modatea {
+  display: none;
+  background: #fff;
+  color: #555;
+  width: 70%;
+  height: auto;
+  padding: 3%;
+  border-radius: 4px;
+  position: fixed;/* 重要*/
+	top: 50%;/* 重要*/
+	left: 50%;/* 重要*/
+	transform: translate(-50%, -50%);/* 重要*/
+  margin: 0 auto;
+  z-index: 2;
+  transition: 0.4s;
+  text-align: center;
+}
+#modal3 {
+  display: none;
+  background: #fff;
+  color: #555;
+  width: 70%;
+  height: auto;
+  padding: 3%;
+  border-radius: 4px;
+  position: fixed;/* 重要*/
+	top: 50%;/* 重要*/
+	left: 50%;/* 重要*/
+	transform: translate(-50%, -50%);/* 重要*/
+  margin: 0 auto;
+  z-index: 2;
+  transition: 0.4s;
+  text-align: center;
+}
+#modal4 {
+  display: none;
+  background: #fff;
+  color: #555;
+  width: 70%;
+  height: auto;
+  padding: 3%;
+  border-radius: 4px;
+  position: fixed;/* 重要*/
+	top: 50%;/* 重要*/
+	left: 50%;/* 重要*/
+	transform: translate(-50%, -50%);/* 重要*/
+  margin: 0 auto;
+  z-index: 2;
+  transition: 0.4s;
+  text-align: center;
+}
 .movie-wrap {
   position: relative;
   width: 100%;
